--- a/FineTuningTemplate/Skai_Template_SFT_FineTuning.ipynb
+++ b/FineTuningTemplate/Skai_Template_SFT_FineTuning.ipynb
@@ -189,7 +189,7 @@
         "            # Tokenizer Parameters\n",
         "            \"trust_remote_code\": True,\n",
         "            # Training Parameters\n",
-        "            \"output_dir\": \"./microsoft_phi\",   # Change the model_ckpt as your wish. For eg - \"./microsoft_phi-1_5_merged-SFT\"\n",
+        "            \"output_dir\": \"\",   # Change the model_ckpt as your wish. For eg - \"./microsoft_phi-1_5_merged-SFT\"\n",
         "            \"num_train_epochs\": 1,\n",
         "            \"per_device_train_batch_size\": 1,\n",
         "            \"gradient_accumulation_steps\": 1,\n",
